--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,25 @@
 
     <properties>
         <spark.scala.version>2.11</spark.scala.version>
-        <spark.version>2.2.0</spark.version>
+        <spark.version>2.4.4</spark.version>
         <hadoop>2.6.0</hadoop>
+        <kafka.version>2.3.0</kafka.version>
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${spark.scala.version}</artifactId>
@@ -48,6 +62,13 @@
             <artifactId>spark-mllib_${spark.scala.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka-0-10_${spark.scala.version}</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
 
 
         <dependency>
